# gmail-unsub

./: .env.sample  .gitignore  Makefile  README.md  generate_list.py  gmail_api.py  logger.py  pyproject.toml  unsubscribe.py
